# pxtone-rs

./: .gitignore  Cargo.toml  LICENSE.md  README.md  deno.json
.cargo/: config.toml  rust-toolchain
.github/: dependabot.yml
.github/workflows/: release.yml  test.yml
benches/: moo.rs
pxtone-source-code 170212a/pxtone/: pxtnDelay.cpp  pxtnDescriptor.h  pxtnEvelist.cpp  pxtnEvelist.h  pxtoneNoise.cpp
src/: descriptor.rs  error.rs  event.rs  helper.rs  lib.rs  main.rs  master.rs  noise.rs  pulse.rs  read_ext.rs  service.rs  text.rs  unit.rs  wasm.rs  woice.rs
src/effect/: delay.rs  mod.rs  overdrive.rs
src/pulse/: frequency.rs  frequency_table.rs  mod.rs  noise.rs  noise_builder.rs  noise_table.rs  oscillator.rs  pcm.rs
src/pulse/noise_builder/: noise_table.rs
src/wasm/: mod.rs  multivalue_wrappers.wat
tests/: README.md  decode_test.rs  wasm_test.ts
tests/snapshots/: 5LOVE[Quois].toml  Aisatsu[Rusk].toml  ComputerXXsan[gensai].toml  Fuwafuwa[PEPO].toml  overworld2_nes[Se-ko].toml  overworld2_orche[Se-ko].toml
tests/snapshots/ptcop/: 5LOVE[Quois].toml  Aisatsu[Rusk].toml  ComputerXXsan[gensai].toml  Fuwafuwa[PEPO].toml  overworld2_nes[Se-ko].toml  overworld2_orche[Se-ko].toml
tests/snapshots/ptnoise/: hat2_close.toml
tools/: bench_wasm.ts  wasm_strip_impl_exports.ts
