[package]
name = "pxtone"
version = "0.1.2"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
byteorder = "1.5.0"
lewton = "0.10.2"

[profile.release]
lto = true
codegen-units = 1

[profile.release-wasm]
inherits = "release"
panic = "abort"
strip = true

[dev-dependencies]
encoding_rs = "0.8.35"
toml = { version = "1.1.2", features = ["preserve_order"] }