[package]
name = "pxtone"
version = "0.5.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
byteorder = "1.5.0"
lewton = "0.10.2"

[target.'cfg(all(not(target_feature = "atomics"), target_family = "wasm"))'.dependencies]
talc = "5.0.3"

[profile.release]
lto = true
codegen-units = 1

[profile.release-wasm]
inherits = "release"
panic = "abort"
strip = true

[dev-dependencies]
encoding_rs = "0.8.35"
toml = { version = "1.1.2", features = ["preserve_order"] }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "moo"
harness = false